# AstroVascPy

./: .auto-changelog  .codespellrc  .copier-answers.yml  .flake8  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AUTHORS.txt  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  commitlint.config.js  package.json  pyproject.toml  setup.py  setup.sh  tox.ini
.github/workflows/: check-packaging.yml  lint.yml  publish-sdist.yml  run-tox.yml  test.yml
astrovascpy/: PetscBinaryIO.py  __init__.py  bloodflow.py  exceptions.py  io.py  ou.py  plotting.py  report_reader.py  report_writer.py  scipy_petsc_conversions.py  typing.py  utils.py  version.py  vtk_io.py
docs/: requirements-petsc4py.txt  requirements.txt
docs/source/: api_ref.rst  conf.py  index.rst
examples/: area_vs_ER.py  compute_static_flow_pressure.py  job_script.sbatch  load_graph_archngv.py  load_graph_archngv.sbatch  load_graph_archngv_nexus.py  load_graph_archngv_nexus.sbatch  run_ou.sbatch  simulate_OU_process.py
examples/data/: params.yaml
examples/data/graphs_folder/: edge_dataset.csv
tests/: test_bloodflow.py  test_graphs.py  test_io.py  test_mpi.py  test_ou.py  test_report_reader.py  test_report_writer.py  test_utils.py
tests/data/: dataset.h5  node_dataset.csv  toy_graph.h5
tests/data/input_flow/: sine.csv
tests/data/reporting/: compartment_report.h5  create_reports.py  diff_unit_compartment_report.h5
